@@ -7,6 +7,5 @@
 
 #cmakedefine QTC_DISABLE_KDEFILEDIALOG_CALLS
 #cmakedefine QTC_QT_ONLY
-#cmakedefine QTC_OLD_NVIDIA_ARROW_FIX
 
 #endif
